# minifat

./: .gitignore  CMakeLists.txt  Disk.txt  README.md  build.sh  cli.h  commands.h  cow  hi  main  main.c  om  run.c  script.exp  zr
commands/: Disk.txt  commands.h  dir_commands.c  files_commands.c  help.c  md.c  parsing.c  run.c
disk/: Disk.txt  disk.h  fat_table.c  fat_table.h  test  test.c  test.sh  virtual_disk.c  virtual_disk.h
disk/test.dSYM/Contents/Resources/DWARF/: test
disk/test.dSYM/Contents/Resources/Relocations/aarch64/: test.yml
files/: Disk.txt  dir.c  dir.h  item.h  test  test.c  test.sh
items/: dir.c  dir.h  files.c  files.h  item.h  test.c  test.sh
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
